--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node angelarium.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,5 @@
   "bugs": {
     "url": "https://github.com/Villawhatever/AngelBot/issues"
   },
-  "homepage": "https://github.com/Villawhatever/AngelBot#readme"
+  "homepage": "https://github.com/Villawhatever/AngelBot#readme",
 }
