--- a/package.json
+++ b/package.json
@@ -21,5 +21,5 @@
   "bugs": {
     "url": "https://github.com/Villawhatever/AngelBot/issues"
   },
-  "homepage": "https://github.com/Villawhatever/AngelBot#readme",
+  "homepage": "https://github.com/Villawhatever/AngelBot#readme"
 }
